# ImageProcessing

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ImageProcessing.sln  ImageProcessing.vcxproj  ImageProcessing.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
ImageProcessing/src/: imaging.cpp  main.cpp
ImageProcessing/src/gui/: window.cpp
ImageProcessing/src/include/: imaging.h  window.h
